I changed Red Grapes & Yellow Banana

--- a/test.html
+++ b/test.html
@@ -1,9 +1,9 @@
 <html>
     <ul>
-        <li>Apple</li>
+        <li>Yellow Banana</li>
         <li>Orange</li>
         <li>Pineaplle</li>
-        <li>Grapes</li>
+        <li>Red Grapes</li>
         <li>Mango</li>
     </ul>
 </html>
